time/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: time
spec:
  selector:
    app: time
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 30004
  type: LoadBalancer
