time/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: time
spec:
  rules:
  - host: time.microservico.local
    http:
      paths:
      - backend:
          serviceName: time
          servicePort: 8080
